kubernetes-adv-deployments/part-11-ingress-aws/ingress-paths.yaml
#---------------------------------------------------------------------
# Manifest File to create Ingess Rules for Host Paths
#
# Copyleft (c) by Guy Dvorkin 2023
#---------------------------------------------------------------------
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-paths

spec:
  rules:
  - host: www.notjustdevops.com
    http:
      paths:
      - path: "/page1"
        backend:
          serviceName: webx
          servicePort: 80

      - path: "/page2"
        backend:
          serviceName: webx
          servicePort: 80

      - path: "/page3"
        backend:
          serviceName: webx
          servicePort: 80
